--- a/index.html
+++ b/index.html
@@ -3,9 +3,100 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Apple Clone</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./css/bootstrap.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1>hello</h1>
+    <!-- nav  -->
+    <nav class="navbar navbar-expand-lg p-1">
+      <div class="container-fluid">
+        <!-- Apple Logo (Visible only on mobile) -->
+        <a class="navbar-brand d-lg-none" href="#">
+          <i class="fa-brands fa-apple" style="color: #ffffff"></i>
+        </a>
+
+        <!-- Right-side icons (Mobile only) -->
+        <div class="d-lg-none d-flex align-items-center ms-auto gap-5">
+          <i class="fa-solid fa-magnifying-glass" style="color: #ffffff"></i>
+          <i class="fa-regular fa-bookmark" style="color: #ffffff"></i>
+          <div id="menu" class="menu">
+            <i class="fa-solid fa-bars" style="color: #ffffff"></i>
+          </div>
+        </div>
+
+        <!-- Collapsible Menu -->
+        <div class="collapse navbar-collapse justify-content-center">
+          <ul class="navbar-nav gap-2">
+            <!-- Apple Logo (Centered on large screens) -->
+            <li class="nav-item apple-logo d-none d-lg-flex">
+              <a class="nav-link" href="#">
+                <i class="fa-brands fa-apple" style="color: #ffffff"></i>
+              </a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Store</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Mac</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">iPad</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">iPhone</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Watch</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Vision</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">AirPods</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">TV & Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Entertainment</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Accessories</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Support</a>
+            </li>
+
+            <!-- Icons (Only visible on large screens) -->
+            <li class="nav-item d-none d-lg-block">
+              <a class="nav-link" href="#">
+                <i
+                  class="fa-solid fa-magnifying-glass"
+                  style="color: #ffffff"
+                ></i>
+              </a>
+            </li>
+            <li class="nav-item d-none d-lg-block">
+              <a class="nav-link" href="#">
+                <i class="fa-regular fa-bookmark" style="color: #ffffff"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <script src="./js/jquery-3.7.1.min.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
