--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       >
         <div class="descriptions container text-center text-white">
           <h1>iPhone 16 Pro</h1>
-          <h3>Hello, Apple Intelligence.</h3>
+          <h6>Hello, Apple Intelligence.</h6>
           <div class="links">
             <button
               class="btn btn-primary rounded-pill"
@@ -125,8 +125,34 @@
       <!-- section 2 -->
       <section class="section2 p-5">
         <div class="descriptions container text-center text-white">
-          <h1>iPhone 16 Pro</h1>
-          <h3>Hello, Apple Intelligence.</h3>
+          <h1>iPhone 16</h1>
+          <h6>Hello, Apple Intelligence.</h6>
+          <div class="links">
+            <button
+              class="btn btn-primary rounded-pill"
+              type="button"
+              title="Learn more about iPhone 16 Pro"
+            >
+              Learn more
+            </button>
+            <button
+              type="button"
+              class="btn btn-outline-primary rounded-pill"
+              title="Buy the iPhone 16 Pro now"
+            >
+              Buy
+            </button>
+          </div>
+        </div>
+      </section>
+
+      <!-- section 3 -->
+      <section class="section3 p-5">
+        <div class="descriptions container text-center text-dark">
+          <div class="watch-logo">
+            <img class="img-fluid" src="./images/icon/watch-logo.png" alt="" />
+          </div>
+          <p>Live healthier. Train better. Stay connected</p>
           <div class="links">
             <button
               class="btn btn-primary rounded-pill"
