cards added but not finished

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <!-- Collapsible Menu -->
         <div class="collapse navbar-collapse justify-content-center">
-          <ul class="navbar-nav gap-2">
+          <ul class="navbar-nav gap-3">
             <!-- Apple Logo (Centered on large screens) -->
             <li class="nav-item apple-logo d-none d-md-flex">
               <a class="nav-link text-white" href="#">
@@ -105,7 +105,7 @@
           <h6>Hello, Apple Intelligence.</h6>
           <div class="links">
             <button
-              class="btn btn-primary rounded-pill"
+              class="btn btn-primary rounded-pill px-3"
               type="button"
               title="Learn more about iPhone 16 Pro"
             >
@@ -113,7 +113,7 @@
             </button>
             <button
               type="button"
-              class="btn btn-outline-primary rounded-pill"
+              class="btn btn-outline-primary rounded-pill px-3"
               title="Buy the iPhone 16 Pro now"
             >
               Buy
@@ -129,7 +129,7 @@
           <h6>Hello, Apple Intelligence.</h6>
           <div class="links">
             <button
-              class="btn btn-primary rounded-pill"
+              class="btn btn-light rounded-pill px-3"
               type="button"
               title="Learn more about iPhone 16 Pro"
             >
@@ -137,7 +137,7 @@
             </button>
             <button
               type="button"
-              class="btn btn-outline-primary rounded-pill"
+              class="btn btn-outline-light rounded-pill px-3"
               title="Buy the iPhone 16 Pro now"
             >
               Buy
@@ -148,14 +148,14 @@
 
       <!-- section 3 -->
       <section class="section3 p-5">
-        <div class="descriptions container text-center text-dark">
+        <div class="descriptions container text-center text-dark mt-5 mt-md-0">
           <div class="watch-logo">
             <img class="img-fluid" src="./images/icon/watch-logo.png" alt="" />
           </div>
           <p>Live healthier. Train better. Stay connected</p>
           <div class="links">
             <button
-              class="btn btn-primary rounded-pill"
+              class="btn btn-primary rounded-pill px-3"
               type="button"
               title="Learn more about iPhone 16 Pro"
             >
@@ -163,15 +163,83 @@
             </button>
             <button
               type="button"
-              class="btn btn-outline-primary rounded-pill"
+              class="btn btn-outline-primary rounded-pill px-3"
               title="Buy the iPhone 16 Pro now"
             >
-              Buy
+              Shop Watch
             </button>
           </div>
         </div>
       </section>
     </main>
+
+    <!-- cards section -->
+    <div class="container-fluid bg-dark p-0">
+      <div class="row g-2 m-0">
+        <div class="col-12 col-md-6">
+          <div class="card card1 d-flex flex-column justify-content-end">
+            <div class="descriptions container text-center text-dark mb-5">
+              <h6>
+                Apple Worldwide Developers Conference. Join us online june 9-13.
+              </h6>
+              <div class="links">
+                <button
+                  class="btn btn-primary rounded-pill px-3"
+                  type="button"
+                  title="Learn more about iPhone 16 Pro"
+                >
+                  Learn more
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6">
+          <div class="card card2 d-flex flex-column justify-content-between">
+            <div class="descriptions container text-center text-dark mt-5">
+              <h1>MacBook Air</h1>
+              <h6>
+                Apple Worldwide Developers Conference. Join us online june 9-13.
+              </h6>
+              <div class="links">
+                <button
+                  class="btn btn-primary rounded-pill px-3"
+                  type="button"
+                  title="Learn more about iPhone 16 Pro"
+                >
+                  Learn more
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-outline-primary rounded-pill px-3"
+                  title="Buy the iPhone 16 Pro now"
+                >
+                  Buy
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6">
+          <div class="card card3"></div>
+        </div>
+
+        <div class="col-12 col-md-6">
+          <div class="card card4"></div>
+        </div>
+
+        <div class="col-12 col-md-6">
+          <div class="card card5"></div>
+        </div>
+
+        <div class="col-12 col-md-6">
+          <div class="card card6"></div>
+        </div>
+      </div>
+    </div>
+
     <script src="./js/jquery-3.7.1.min.js"></script>
     <script src="./js/script.js"></script>
   </body>
