--- a/index.html
+++ b/index.html
@@ -104,17 +104,12 @@
           <h1>iPhone 16 Pro</h1>
           <h6>Hello, Apple Intelligence.</h6>
           <div class="links">
-            <button
-              class="btn btn-primary rounded-pill px-3"
-              type="button"
-              title="Learn more about iPhone 16 Pro"
-            >
+            <button class="btn btn-primary rounded-pill px-3" type="button">
               Learn more
             </button>
             <button
               type="button"
               class="btn btn-outline-primary rounded-pill px-3"
-              title="Buy the iPhone 16 Pro now"
             >
               Buy
             </button>
@@ -128,17 +123,12 @@
           <h1>iPhone 16</h1>
           <h6>Hello, Apple Intelligence.</h6>
           <div class="links">
-            <button
-              class="btn btn-light rounded-pill px-3"
-              type="button"
-              title="Learn more about iPhone 16 Pro"
-            >
+            <button class="btn btn-light rounded-pill px-3" type="button">
               Learn more
             </button>
             <button
               type="button"
               class="btn btn-outline-light rounded-pill px-3"
-              title="Buy the iPhone 16 Pro now"
             >
               Buy
             </button>
@@ -154,17 +144,12 @@
           </div>
           <p>Live healthier. Train better. Stay connected</p>
           <div class="links">
-            <button
-              class="btn btn-primary rounded-pill px-3"
-              type="button"
-              title="Learn more about iPhone 16 Pro"
-            >
+            <button class="btn btn-primary rounded-pill px-3" type="button">
               Learn more
             </button>
             <button
               type="button"
               class="btn btn-outline-primary rounded-pill px-3"
-              title="Buy the iPhone 16 Pro now"
             >
               Shop Watch
             </button>
@@ -173,21 +158,23 @@
       </section>
     </main>
 
-    <!-- cards section -->
-    <div class="container-fluid bg-dark p-0">
+    <!-- cards-->
+    <div class="container-fluid p-0">
       <div class="row g-2 m-0">
         <div class="col-12 col-md-6">
-          <div class="card card1 d-flex flex-column justify-content-end">
+          <div
+            class="border-0 card card1 d-flex flex-column justify-content-end"
+          >
             <div class="descriptions container text-center text-dark mb-5">
-              <h6>
-                Apple Worldwide Developers Conference. Join us online june 9-13.
-              </h6>
+              <div class="w-75 mx-auto">
+                <p>
+                  Apple Worldwide Developers Conference. Join us online june
+                  9-13.
+                </p>
+              </div>
+
               <div class="links">
-                <button
-                  class="btn btn-primary rounded-pill px-3"
-                  type="button"
-                  title="Learn more about iPhone 16 Pro"
-                >
+                <button class="btn btn-primary rounded-pill px-3" type="button">
                   Learn more
                 </button>
               </div>
@@ -196,26 +183,84 @@
         </div>
 
         <div class="col-12 col-md-6">
-          <div class="card card2 d-flex flex-column justify-content-between">
+          <div
+            class="border-0 card card2 d-flex flex-column justify-content-between"
+          >
             <div class="descriptions container text-center text-dark mt-5">
               <h1>MacBook Air</h1>
-              <h6>
-                Apple Worldwide Developers Conference. Join us online june 9-13.
-              </h6>
+              <div class="mx-auto w-50">
+                <p>Sky blue color. Sky high performance with M4.</p>
+              </div>
               <div class="links">
-                <button
-                  class="btn btn-primary rounded-pill px-3"
-                  type="button"
-                  title="Learn more about iPhone 16 Pro"
-                >
+                <button class="btn btn-primary rounded-pill px-3" type="button">
                   Learn more
                 </button>
                 <button
                   type="button"
                   class="btn btn-outline-primary rounded-pill px-3"
-                  title="Buy the iPhone 16 Pro now"
                 >
                   Buy
+                </button>
+              </div>
+            </div>
+            <div class="text-center mb-4">
+              <p class="intel">Built for Apple Intelligence</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6">
+          <div
+            class="border-0 card card3 d-flex flex-column justify-content-between"
+          >
+            <div class="descriptions container text-center text-dark mt-5">
+              <h1>iPad<span>Air</span></h1>
+              <h6>New supercharged by the M3 chip.</h6>
+              <div class="links">
+                <button class="btn btn-primary rounded-pill px-3" type="button">
+                  Learn more
+                </button>
+                <button
+                  type="button"
+                  class="btn btn-outline-primary rounded-pill px-3"
+                >
+                  Buy
+                </button>
+              </div>
+            </div>
+            <div class="text-center mb-4">
+              <p class="intel">Built for Apple Intelligence</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6">
+          <div class="border-0 card card4">
+            <div
+              class="descriptions container text-center text-white mt-5 w-75"
+            >
+              <div class="tv-logo w-75 mx-auto">
+                <img
+                  class="img-fluid w-25"
+                  src="./images/icon/tv-logo.png"
+                  alt="TV Logo"
+                />
+              </div>
+              <div class="baseball-logo my-3">
+                <img
+                  class="img-fluid"
+                  src="./images/icon/baseball-logo.png"
+                  alt="Baseball Logo"
+                />
+              </div>
+              <div class="w-75 mx-auto">
+                <p>
+                  Home runs. Diving catches. Baseball returns. Live this Friday.
+                </p>
+              </div>
+              <div class="links">
+                <button class="btn btn-light rounded-pill" type="button">
+                  Learn more
                 </button>
               </div>
             </div>
@@ -223,19 +268,58 @@
         </div>
 
         <div class="col-12 col-md-6">
-          <div class="card card3"></div>
+          <div class="border-0 card card5">
+            <div class="descriptions container text-center text-dark mt-5 w-75">
+              <div class="tv-logo w-50 mx-auto">
+                <img
+                  class="img-fluid w-50"
+                  src="./images/icon/trade-logo.png"
+                  alt="TV Logo"
+                />
+              </div>
+              <div class="w-75 mx-auto">
+                <p>
+                  Home runs. Diving catches. Baseball returns. Live this Friday.
+                </p>
+              </div>
+              <div class="links">
+                <button class="btn btn-primary rounded-pill" type="button">
+                  Get your estimate
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="col-12 col-md-6">
-          <div class="card card4"></div>
-        </div>
+          <div class="border-0 card card6">
+            <div class="descriptions container text-center text-dark mt-5 w-75">
+              <div class="tv-logo w-50 mx-auto">
+                <img
+                  class="img-fluid w-50"
+                  src="./images/icon/border-0 card-logo.png"
+                  alt="TV Logo"
+                />
+              </div>
+              <div class="w-75 mx-auto">
+                <p>
+                  Home runs. Diving catches. Baseball returns. Live this Friday.
+                </p>
+              </div>
+              <div class="links">
+                <button class="btn btn-primary rounded-pill" type="button">
+                  Learn more
+                </button>
 
-        <div class="col-12 col-md-6">
-          <div class="card card5"></div>
-        </div>
-
-        <div class="col-12 col-md-6">
-          <div class="card card6"></div>
+                <button
+                  class="btn btn-outline-primary rounded-pill"
+                  type="button"
+                >
+                  Apply now
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
