--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <div class="col-12 col-md-6">
           <div class="border-0 card card5">
             <div class="descriptions container text-center text-dark mt-5 w-75">
-              <div class="tv-logo w-50 mx-auto">
+              <div class="tv-logo w-75 mx-auto">
                 <img
                   class="img-fluid w-50"
                   src="./images/icon/trade-logo.png"
@@ -297,7 +297,7 @@
               <div class="tv-logo w-50 mx-auto">
                 <img
                   class="img-fluid w-50"
-                  src="./images/icon/border-0 card-logo.png"
+                  src="./images/icon/card-logo.png"
                   alt="TV Logo"
                 />
               </div>
