--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="descriptions container text-center text-white">
           <h1>iPhone 16 Pro</h1>
           <h6>Hello, Apple Intelligence.</h6>
-          <div class="links">
+          <div class="links mt-3">
             <button class="btn btn-primary rounded-pill px-3" type="button">
               Learn more
             </button>
@@ -122,7 +122,7 @@
         <div class="descriptions container text-center text-white">
           <h1>iPhone 16</h1>
           <h6>Hello, Apple Intelligence.</h6>
-          <div class="links">
+          <div class="links mt-3">
             <button class="btn btn-light rounded-pill px-3" type="button">
               Learn more
             </button>
